Create SectionOne.css and SectionOne.jsx in HomeComponents

--- a/e-commerce/src/Components/Navbar.css
+++ b/e-commerce/src/Components/Navbar.css
@@ -33,6 +33,9 @@
 .navSection ul li{
     padding: 7px 20px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .navSection ul li:hover{
