--- a/e-commerce/src/Components/HomeComponents/SectionOne.css
+++ b/e-commerce/src/Components/HomeComponents/SectionOne.css
@@ -6,3 +6,49 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
+.homeSectionOne{
+   display: flex;
+   align-items: center;
+   gap: 30px;
+   padding: 20px 10%;
+   padding-top: 130px;
+   background-color: #CEE2CB;
+}
+
+.firstSection{
+    width: 100%;
+}
+
+.firstSection h2{
+    font-size: 60px;
+    padding: 20px 0;
+}
+
+.firstSection p{
+    font-size: 24px;
+}
+
+.firstSection button{
+   background-color: #000; 
+   color: white;
+   border-radius: 30px;
+   border: none;
+   padding: 20px 40px;
+   margin-top: 30px;
+   font-size: 18px;
+   font-weight: bold; 
+   display: flex;
+   align-items: center;
+   gap: 10px;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.secondSection{
+    width: 100%;
+    
+}
+
+.secondSection img{
+    width: 100%;
+}
