--- a/e-commerce/src/Components/HomeComponents/SectionOne.css
+++ b/e-commerce/src/Components/HomeComponents/SectionOne.css
@@ -52,3 +52,30 @@
 .secondSection img{
     width: 100%;
 }
+
+.generalHomeSection{
+    position: relative;
+}
+
+.myBtn{
+    position: absolute;
+    bottom: 30px;
+    left: 45%;
+    display: flex;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.myBtn button{
+    background-color: aliceblue;
+    padding: 3px 40px;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+
+}
+
+.activeBtn{
+    background-color: rgb(1, 11, 41) !important;
+}
