--- a/e-commerce/src/Components/HomeComponents/SectionOne.css
+++ b/e-commerce/src/Components/HomeComponents/SectionOne.css
@@ -79,3 +79,26 @@
 .activeBtn{
     background-color: rgb(1, 11, 41) !important;
 }
+
+/* --------Swiper------------------*/
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
