--- a/e-commerce/src/Components/HomeComponents/SectionOne.css
+++ b/e-commerce/src/Components/HomeComponents/SectionOne.css
@@ -143,6 +143,7 @@
 .card1Two img{
     height: 100%;
 }
+
 .homeSectionTwo{
     padding: 20px 10%;
     padding-top: 100px; 
@@ -193,20 +194,18 @@
   /*===============section two====================== */
 
   .card2{
-    display: flex;
-    gap: 20px;
-    align-items: center;
+    width: 100%;
     text-align: left;
-    background-color: #eeebd4;
-    padding: 30px;
-    border-radius: 10px;
-    position: relative;
     cursor: pointer;
+    position: relative;
   }
 
-  .card2One{
-    width: 100%;
-}
+  .card2Two{
+    background-color: #f0fff0;
+    border-radius: 15px;
+    
+  }
+
 
 .card2One button{
     padding: 10px 30px;
@@ -222,9 +221,6 @@
     
 }
 
-.card2Two{
-    width: 100%;
-}
 
 .card2 h2{
     font-size: 20px;
@@ -234,5 +230,107 @@
     font-size: 15px;
 }
 
+.card2List{
+    position: absolute;
+    bottom: 160px;
+    left: 25%;
+    display: none;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+   
+}
 
-  
+.card2List li{
+    background-color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 6px 12px; 
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border-radius: 5px;
+    cursor: pointer;
+    list-style: none;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    
+}
+
+.card2List li:hover{
+    background-color: #000;
+    color: white;
+}
+
+.card2:hover .card2List{
+    display: flex;
+}
+
+.card2Two{
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.card2One{
+    background-color: white;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+
+.card2One p{
+    font-size: 18px;
+}
+
+.card2Onediv{
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
+}
+
+
+.card2Onediv p{
+    margin-left: auto;
+    font-size: 18px;
+    color: gray;
+   
+}
+
+.card2Onediv span{
+    font-size: 18px;
+    border:1px solid green;
+    padding:3px 10px;
+    border-radius:5px;
+    color: green;
+}
+
+.card2Button{
+    display: inline-block;
+    background-color: white;
+    color: green;
+    padding: 5px 20px;
+    border: 3px solid green;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+card2 p{
+    display: flex;
+    align-items: center;
+}
+
+.card2para{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin-right: 20px;
+
+}
+
+.card2Button .card2para{
+    display: flex;
+    justify-content: space-between;
+   
+    gap: 20px;
+}
